# twizzler

./: .gitignore  CMakeCache.txt
src/playground/: CMakeLists.txt  README.md  appendStore.c  appendStore.h  arrayStore.c  arrayStore.h  bPlusTree.c  bPlusTreeArray.c  basicStoreTest.c  indexTests.c  testhello.c
src/playground/testData/: title.small.ratings.tsv
